[#2715] Fix FireFox layout bug
In FF the whole main section became 0px wide after a change in f80757d8. Fix by explicitly setting width on main to 100%.

--- a/akvo/rsr/static/styles-src/results.scss
+++ b/akvo/rsr/static/styles-src/results.scss
@@ -4120,6 +4120,7 @@ header[role="banner"] {
 main {
     display: flex;
     height: calc(100vh - 300px);
+    width: 100%;
 
     article.full {
         width: 100%;
